--- a/views/myfiles.ejs
+++ b/views/myfiles.ejs
@@ -183,6 +183,7 @@ p {
         <% let link4 = "/addsf/" + file %> 
         <% let link5 = "/rmsf/" + file %> 
         <% let link6 = "/playvideo/" + `${req.user.username}/` + file %> 
+        <% let link7 = "/playaudio/" + `${req.user.username}/` + file %>
         <% let isShared; %> 
         <% let size = fs.statSync(__dirname + "/.."  + config.uploadsfolder + `${req.user.username}/` + file).size / (1024 * 1024) %> 
         <% if (isImg(__dirname + "/.." + config.uploadsfolder + `${req.user.username}/` + file)) { %> 
@@ -193,9 +194,11 @@ p {
           <% } else { %> 
           <td><a href=<%= link6 %> ><span class="material-icons">play_circle</span></a></td>
           <% } %> 
-          <% } else { %>
+          <% } else if (isAudio(file)) { %>
+          <td><a href=<%= link7 %>><span class="material-icons">headphones</span></a></td>
+        <% } else { %> 
           <td>-</td>
-        <% } %>  
+        <% } %> 
         <td><%= file %></td>
         <% if (sharedFiles.includes(file)) { %>
           <td>Yes</td>
