--- a/views/addrole.ejs
+++ b/views/addrole.ejs
@@ -155,6 +155,32 @@ button[id="add"]:hover {
     text-align: center; 
  }
 
+ label[for="badge"] {     
+  color: #5D3FD3;
+    margin-top: 5px;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+}
+
+input[id="badge"] {
+    height: 60px;
+    width: 250px;
+    background-color: white;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+    font-family: "Montserrat", sans-serif;
+    border-radius: 24px;
+    transition-duration: 0.4s;
+    border:0cm
+}
 
     </style>
     <h1><%= cloudname %></h1>
@@ -165,6 +191,8 @@ button[id="add"]:hover {
         <input type="text" id="role" name="role" required></input>
         <label for="storage"><span class="material-icons">storage</span>&nbsp;Amount of storage (in MB)</label>
         <input type="text", id="storage", name="storage" required placeholder="128 MB"></input>
+        <label for="badge"><span class="material-icons">verified</span>&nbsp;URL of badge (not required)</label>
+        <input type="text", id="badge", name="badge"></input>
         <button type="submit" id="add"><span class="material-icons">add</span>&nbsp;Add role</button>
     </form>
     <footer>
