--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -288,6 +288,33 @@ input[id="maxStorage"] {
     font-size: 20px;
 }
 
+label[for="badge"] {     
+  color: #5D3FD3;
+    margin-top: 5px;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+}
+
+input[id="badge"] {
+    height: 60px;
+    width: 250px;
+    background-color: white;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+    font-family: "Montserrat", sans-serif;
+    border-radius: 24px;
+    transition-duration: 0.4s;
+    border:0cm
+}
+
 
 .material-icons.md-36 { font-size: 36px;   margin-top: 20px;}
     </style>
@@ -340,6 +367,7 @@ input[id="maxStorage"] {
           <% let link = "/deleteaccount/" + user.username %>
           <% let link2 = "/editrole/" + user.username %> 
           <% let link4 = "/editaccount/" + user.username %> 
+          <% let userrole = user.role %>
           <% let isverified; %>    
           <% if (user.isVerified) { %>
             <% isverified = "Yes" %>
@@ -347,7 +375,8 @@ input[id="maxStorage"] {
             <% isverified = "No" %>
           <% } %>   
           <tr>
-            <td><%= user.username %></td>
+            <% let badge = roles.filter((obj) => {return obj.name == user.role})[0].badge   %>
+            <td><%= user.username %> | <img title=<%= user.role %> src=<%= badge %> width="20" height="20"></img></td>
             <td><%= user.email %> </td>
             <td><%= isverified %> </td>
             <% if (config.registerip) { %>
@@ -369,7 +398,7 @@ input[id="maxStorage"] {
     <form action="/delrole/">
       <input type="submit" class="del" value="Remove role"></input>
     </form>
-      <form action="/updaterole/" method="get">
+      <form action="/updaterole/" method="post">
         <select name="role">
           <% for (let role of roles) { %>        
           <option value=<%= role.name %>><%= role.name %> | <%= role.maxStorage %> MB</option>
@@ -377,6 +406,8 @@ input[id="maxStorage"] {
         </select>
         <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
         <input type="text" id="maxStorage" name="maxStorage" required placeholder="128 MB"></input><h2 class="mb">MB</h2>
+        <label for="badge"><span class="material-icons">verified</span>&nbsp;URL of badge (not required)</label>
+        <input type="text", id="badge", name="badge"></input>
         <input type="submit" class="setasdefault" value="Update role"></input>
       </form>
       <h2 class="storageplans">API Keys</h2>
