--- a/views/register.ejs
+++ b/views/register.ejs
@@ -196,7 +196,7 @@ button[id="register"]:hover {
         <button type="submit" id="register"><span class="material-icons">how_to_reg</span>&nbsp;Register</button>
     </form>
     <footer>
-        <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
+        <div class="footer"><%= cloudname %> © 2022 - 2023 | Created by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
     
     </footer>
 </body>
