--- a/views/editrole.ejs
+++ b/views/editrole.ejs
@@ -129,7 +129,7 @@ select {
     <button type="submit" id="add"><span class="material-icons">contact_mail</span>&nbsp;Change role</button>
     </form>
     <footer>
-        <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
+        <div class="footer"><%= cloudname %> © 2022 - 2023 | Created by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
     
     </footer>
 </body>
