fix: better footer text

--- a/views/editaccount.ejs
+++ b/views/editaccount.ejs
@@ -158,7 +158,7 @@ button[id="rename"]:hover {
         <button type="submit" id="rename"><span class="material-icons">edit</span>&nbsp;Rename account</button>
     </form>
     <footer>
-        <div class="footer"><%= cloudname %> © 2022 - 2023 | Created by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
+               <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
     
     </footer>
 </body>
