--- a/views/index.ejs
+++ b/views/index.ejs
@@ -464,7 +464,7 @@ function abortHandler(event) {
         <h3 id="status"></h3>
     </form>
     <footer>
-        <div class="footer"><%= cloudname %> © 2022 - 2023 | Created by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
+               <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
     
     </footer>
 </body>
