--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -435,7 +435,7 @@ input[id="badge"] {
         <input type="submit" class="back" href="/" value="Back to home page"></input>
         </form>
     <footer>
-      <div class="footer"><%= cloudname %> © 2022 - 2023 | Created by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
+             <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
     
     </footer>
 </body>
