--- a/views/delacc.ejs
+++ b/views/delacc.ejs
@@ -120,7 +120,7 @@
             <input type="submit" value="No"></input>
             </form>
             <footer>
-              <div class="footer"><%= cloudname %> © 2022 - 2023 | Created by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
+                     <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
         
         </footer>
         </body>
