--- a/views/delrole.ejs
+++ b/views/delrole.ejs
@@ -129,7 +129,7 @@ select {
     <button type="submit" id="add"><span class="material-icons">delete</span>&nbsp;Delete role</button>
     </form>
     <footer>
-        <div class="footer"><%= cloudname %> © 2022 - 2023 | Created by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
+               <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
     
     </footer>
 </body>
