--- a/views/login.ejs
+++ b/views/login.ejs
@@ -178,7 +178,7 @@ a {
     </form>
     <a href="/register">Haven't account yet?</a>
     <footer>
-        <div class="footer"><%= cloudname %> © 2022 - 2023 | Created by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
+               <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
     
     </footer>
 </body>
