--- a/views/message.ejs
+++ b/views/message.ejs
@@ -118,7 +118,7 @@
             <input type="submit" href="/" value="Back to home page"></input>
             </form>
             <footer>
-              <div class="footer"><%= cloudname %> © 2022 - 2023 | Created by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
+                     <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
         
         </footer>
         </body>
