--- a/views/myfiles.ejs
+++ b/views/myfiles.ejs
@@ -225,7 +225,7 @@ p {
         <input type="submit" href="/" value="Back to home page"></input>
         </form>
     <footer>
-      <div class="footer"><%= cloudname %> © 2022 - 2023 | Created by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
+             <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
     
     </footer>
   </body>
