--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -161,7 +161,7 @@ button[id="verify"]:hover {
     </form>
     <a href="/verifycode">Have a code already?</a>
     <footer>
-        <div class="footer"><%= cloudname %> © 2022 - 2023 | Created by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
+               <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
     
     </footer>
 </body>
