--- a/views/editaccount.ejs
+++ b/views/editaccount.ejs
@@ -51,6 +51,16 @@ h1 {
     text-align: center;
 }
 
+p {
+    color: #5D3FD3;
+    margin-top: 5px;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+}
+
 label[for="newname"] {
     color: #5D3FD3;
     margin-top: 5px;
@@ -157,6 +167,7 @@ button[id="rename"]:hover {
         <input type="email", id="newemail", name="newemail" required></input>
         <button type="submit" id="rename"><span class="material-icons">edit</span>&nbsp;Rename account</button>
     </form>
+    <p>* Profile pictures are powered by Gravatar</p>
     <footer>
                <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
     
