--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
     flex-direction: column;
 }
 
-.editaccount {
+.myprofile {
     color: white;
     height: 60px;
     width: 125px;
@@ -44,7 +44,7 @@
     border:0cm
 }
 
-.editaccount:hover {
+.myprofile:hover {
     color: #5D3FD3;
     height: 60px;
     width: 125px;
@@ -54,44 +54,6 @@
     justify-content: center;
     align-items: center;
     margin-left: 5px;
-    margin-right: auto;
-    margin-top: -60px;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-.delaccount {
-    color: white;
-    height: 60px;
-    width: 125px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 135px;
-    margin-right: auto;
-    margin-top: -60px;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-.delaccount:hover {
-    color: #5D3FD3;
-    height: 60px;
-    width: 125px;
-    background-color: white;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 135px;
     margin-right: auto;
     margin-top: -60px;
     cursor: pointer;
@@ -447,11 +409,8 @@ function abortHandler(event) {
             <button type="submit" class="admin">Admin Panel</button>
         </form> 
         <% } %>
-        <form action="/editmyaccount">
-            <button type="submit" class="editaccount">Edit account</button>
-        </form>
-        <form action="/delmyaccount">
-            <button type="submit" class="delaccount">Delete account</button>
+        <form action="/myprofile">
+            <input type="submit" class="myprofile" value="My profile"></input>
         </form>
     <h1><%= cloudname %></h1>
     <h2 class="subtitle">Welcome, <%= username %> <img title=<%= user.role %> src=<%= badge %> width="30" height="30"></img>!</h2> 
