--- a/views/myfiles.ejs
+++ b/views/myfiles.ejs
@@ -80,8 +80,9 @@
     border:0cm
     }
         .footer {
-    position: fixed;
-    padding: 10px 10px 0px 10px;
+          position: relative;
+    padding: 10px 0px 0px 0px;
+    margin-top: 10px;
     bottom: 0;
     width: 100%;
     /* Height of the footer*/
